Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51322

Popup doesn't respect height

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.6.0
    • Quick: Controls 2
    • None
    • 22624517ccbe780937ec2ba0b4264b71e38484bb

    Description

      import QtQuick 2.3
      import QtQuick.Window 2.2
      import Qt.labs.controls 1.0
      
      Window {
          id: window
          width: 400
          height: 400
          visible: true
      
          Button {
              text: "Open"
              onClicked: popup.open()
          }
      
          Popup {
              id: popup
              width: 200
              height: 300
              modal: true
              focus: true
              closePolicy: Popup.OnEscape | Popup.OnPressOutside
      
              onHeightChanged: print("height", height)
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes