Fix QQuickPopup to respect explicit size

Don't resize the popup (clamping to its implicit size) unless
the popup really has to be resized in order to fit the screen.

Change-Id: I81201b77a1001ac22291ede1fc685f7208ff2916
Task-number: QTBUG-51322
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>